<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <RadioGroup
        android:id="@+id/timeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:id="@+id/radioButton50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_50ms" />

        <RadioButton
            android:id="@+id/radioButton100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_100ms" />

        <RadioButton
            android:id="@+id/radioButton300"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_300ms" />

        <RadioButton
            android:id="@+id/radioButton500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_500ms" />
    </RadioGroup>

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:onClick="startProgressBar" />

    <Button
        android:id="@+id/restartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart"
        android:onClick="restartProgressBar"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:max="100" />
</LinearLayout>
